fix sidebar in dark mode

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -611,11 +611,13 @@ $navbar-light-color: var(--#{$prefix}body-color) !default;
 $navbar-light-brand-color: var(--#{$prefix}body-color) !default;
 $navbar-light-active-color: var(--#{$prefix}body-color)color !default;
 $navbar-light-disabled-color: var(--#{$prefix}disabled-color) !default;
+$navbar-light-active-bg: rgba(0, 0, 0, .06) !default;
 
 $navbar-dark-color: rgba($white, $text-muted-opacity) !default;
 $navbar-dark-brand-color: $white !default;
 $navbar-dark-active-color: $white !default;
 $navbar-dark-disabled-color: var(--#{$prefix}disabled-color) !default;
+$navbar-dark-active-bg: rgba(255, 255, 255, .06) !default;
 
 $navbar-brand-padding-y: $nav-link-padding-y !default;
 $navbar-brand-image-height: 2rem !default;
@@ -628,12 +630,12 @@ $navbar-toggler-padding-x: 0 !default;
 $navbar-toggler-padding-y: 0 !default;
 $navbar-toggler-animation-time: .2s !default;
 $navbar-toggler-focus-width: 0 !default;
+$navbar-overlap-height: 9rem !default;
 
 $navbar-nav-link-padding-x: $nav-link-padding-x !default;
 
 $navbar-active-border-color: var(--#{$prefix}primary) !default;
 
-$navbar-overlap-height: 9rem !default;
 
 // Sidebar
 $sidebar-width: 15rem !default;
